--- a/predicting crab_age_using_lgbm.ipynb
+++ b/predicting crab_age_using_lgbm.ipynb
@@ -27,8 +27,8 @@
       "cell_type": "code",
       "source": [
         "# Read data\n",
-        "train=pd.read_csv('/content/drive/MyDrive/projects/Crab Age prediction/train.csv')\n",
-        "test=pd.read_csv('/content/drive/MyDrive/projects/Crab Age prediction/test.csv')"
+        "train=pd.read_csv('train.csv')\n",
+        "test=pd.read_csv('test.csv')"
       ],
       "metadata": {
         "id": "k1Z5BWf7zf84"
