--- a/predicting_crab_age_with_lgbm.ipynb
+++ b/predicting_crab_age_with_lgbm.ipynb
@@ -13,11 +13,9 @@
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
-        "from sklearn.preprocessing import StandardScaler\n",
         "from sklearn.model_selection import cross_val_score\n",
         "from sklearn.model_selection import KFold\n",
-        "from sklearn.compose import TransformedTargetRegressor\n",
-        "from sklearn.metrics import mean_absolute_error,r2_score\n",
+        "from sklearn.metrics import mean_absolute_error\n",
         "import lightgbm as lgb\n",
         "import optuna"
       ]
